--- a/config/AcesContainer.pc.in
+++ b/config/AcesContainer.pc.in
@@ -45,7 +45,7 @@
 # A.M.P.A.S., WHETHER DISCLOSED OR UNDISCLOSED.
 
 prefix=@CMAKE_INSTALL_PREFIX@
-libdir=@INSTALL_LIB_DIR@
+libdir=@LIB_INSTALL_DIR@
 includedir=@INSTALL_INCLUDE_DIR@
 AcesContainer_includedir=@INSTALL_INCLUDE_DIR@/aces
 
