--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,15 +79,15 @@ foreach( p LIB INCLUDE CMAKE )
 endforeach()
 
 OPTION (BUILD_SHARED_LIBS "Build Shared Libraries" OFF)
-SET (LIB_TYPE_STATIC)
+SET (LIB_TYPE_STATIC FALSE)
 IF (BUILD_SHARED_LIBS)
-  SET (LIB_TYPE_SHARED)
+  SET (LIB_TYPE_SHARED TRUE)
 ENDIF (BUILD_SHARED_LIBS)
 
 OPTION (BUILD_STATIC_LIBS  "Build Static Libraries" OFF)
-SET (LIB_TYPE_SHARED)
+SET (LIB_TYPE_SHARED FALSE)
 IF (BUILD_STATIC_LIBS)
-  SET (LIB_TYPE_STATIC)
+  SET (LIB_TYPE_STATIC TRUE)
 ENDIF (BUILD_STATIC_LIBS)
 
 add_library( AcesContainer SHARED
