--- a/config/AcesContainerConfig.cmake.in
+++ b/config/AcesContainerConfig.cmake.in
@@ -53,10 +53,10 @@
 # find paths
 get_filename_component( AcesContainer_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH )
 
-set(AcesContainer_INCLUDE_DIRS "@CONF_INCLUDE_DIRS@")
+set(AcesContainer_INCLUDE_DIRS "@CMAKE_INSTALL_INCLUDEDIR@")
 
 set(AcesContainer_LIBRARIES AcesContainer )
-set(AcesContainer_LIBRARY_DIRS "@CONF_LIB_DIRS@" )
+set(AcesContainer_LIBRARY_DIRS "@CMAKE_INSTALL_LIBDIR@" )
 set(AcesContainer_VERSION "@AcesContainer_VERSION@" )
 
 set(AcesContainer_FOUND 1 )
