Removed export PACKAGE to prevent install conflicts Changed install paths to fixed in cmake configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,14 +135,7 @@ include_directories(
 # Add all targets to the build-tree export set
 export(TARGETS AcesContainer
   FILE "${PROJECT_BINARY_DIR}/AcesContainerTargets.cmake")
-# export(TARGETS AcesContainer_lib
-#  FILE "${PROJECT_BINARY_DIR}/AcesContainerTargets.cmake")
  
-# Export the package for use from the build-tree
-# (this registers the build-tree with a global CMake-registry)
-export(PACKAGE AcesContainer)
-# export(PACKAGE AcesContainer_lib)
-
 # Create the FooBarConfig.cmake and FooBarConfigVersion files
 file(RELATIVE_PATH REL_INCLUDE_DIR "${INSTALL_CMAKE_DIR}"
    "${INSTALL_INCLUDE_DIR}")
@@ -154,7 +147,7 @@ configure_file(config/AcesContainerConfig.cmake.in
   "${PROJECT_BINARY_DIR}/AcesContainerConfig.cmake" @ONLY)
 
 # ... for the install tree
-set(CONF_INCLUDE_DIRS "\${AcesContainer_CMAKE_DIR}/${REL_INCLUDE_DIR}" "\${AcesContainer_CMAKE_DIR}/${REL_INCLUDE_DIR}/aces")
+set(CONF_INCLUDE_DIRS "${INSTALL_INCLUDE_DIR}")
 set(CONF_LIB_DIRS "${INSTALL_LIB_DIR}")
 configure_file(config/AcesContainerConfig.cmake.in
   "${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/AcesContainerConfig.cmake" @ONLY)
